# todo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test-python.yaml
src/python/: __init__.py  auth.py  main.py
src/python/database/: database.py  db.py
src/tests/: test_app.py  test_database.py
tests/: test_app.py
todo_backend/: main.py
