[tool.poetry]
name = "todo-backend"
version = "0.1.0"
description = ""
authors = ["florent-haxhiu <florenthaxhiu03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flake8 = "^7.0.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
